DEVEX-539 fixed startup script (WIN only), use JUnit 5
FsDevTools | Update auf JUnit 5